<resources>
    <string name="app_name">RiyadhGo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="new_here">New here ?</string>
    <string name="register_now">Register Now</string>
    <string name="have_account">Have an account ?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="acknowledgement">
        <![CDATA[
        <h5>Thanks to our dedicated<h5>
        <h5>Designers and Software Engineers</h5>
        <span>Dhoha Bediwi</span>
        <br/>
        <span>Haifa Almutairi</span>
        <br/>
        <span>Reem Alharbi</span>
        <br/>
        <span>Ward Mousa</span>
        ]]>
    </string>
    <string name="acknowledgement_title">Acknowledgement</string>
    <string name="menu">Menu</string>
    <string name="create_account">Create Account</string>
    <string name="where_are_you_going_today">Where are you going today?</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for a place</string>
    <string name="choose_pickup_point">Choose Pickup</string>
    <string name="choose_your_dest">Choose your destination</string>
    <string name="favorites">Favorites</string>
    <string name="choose_your_method">Choose your method</string>
    <string name="book">Book</string>
    <string name="current_location">Current Location</string>
    <string name="destination">Destination</string>
    <string name="bus">Bus</string>
    <string name="car">Car</string>
    <string name="scooter">Scooter</string>
    <string name="walking">Walking</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="add_to_favorites">To Favorites</string>
    <string name="your_dest">Choose Destination</string>
    <string name="error">Error</string>
    <string name="selected">Selected</string>
    <string name="directions">Directions</string>
    <string name="proceed">Proceed</string>
    <string name="tstart">Start</string>
    <string name="tm_car">Car</string>
    <string name="tm_walking">Walking</string>
    <string name="tm_scooter">Scooter</string>
    <string name="tm_bus">Bus</string>
    <string name="view_methods">Methods</string>
    <string name="start">Start</string>
    <string name="riyadh_go">RiyadhGO</string>
    <string name="walkto">Walk To</string>
    <string name="distance">Distance</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="distance_15km">15 KM</string>
    <string name="time_15min">15 Min</string>
    <string name="sos">SOS</string>
    <string name="GO">GO</string>
    <string name="sos_number">0550677295</string>
    <string name="user_guest">User Guest</string>
    <string name="end_trip_detail">Trip Detail</string>
    <string name="you_did_it">You Did It</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="cal_50">50</string>
    <string name="car_50">50g</string>
    <string name="txt_continue">Continue</string>
    <string name="trip_end">!Trip Ended!</string>
    <string name="carbon_emitted">Carbon Emitted</string>
    <string name="carbon_saved">Carbon Saved</string>
    <string name="transport_methods">Transportation Method</string>

</resources>