<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_splash_fragment">

    <fragment
        android:id="@+id/navigation_login"
        android:name="sa.edu.yamamh.riyadhgo.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_registerFragment"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="sa.edu.yamamh.riyadhgo.ui.auth.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_acknowledgement"
        android:name="sa.edu.yamamh.riyadhgo.ui.AcknowledgementFragment"
        android:label="@string/acknowledgement_title"
        tools:layout="@layout/fragment_acknowledgement" />
    <fragment
        android:id="@+id/menuFragment"
        android:name="sa.edu.yamamh.riyadhgo.ui.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu" >
        <action
            android:id="@+id/action_menuFragment_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_menuFragment_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_menuFragment_to_navigation_acknowledgement"
            app:destination="@id/navigation_acknowledgement" />
    </fragment>
    <fragment
        android:id="@+id/startFragment"
        android:name="sa.edu.yamamh.riyadhgo.ui.StartFragment"
        android:label="@string/start"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_splash_fragment"
        android:name="sa.edu.yamamh.riyadhgo.ui.SplashFragment"
        android:label="@string/riyadh_go"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>
</navigation>