<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MenuFragment"
    android:padding="10dp">

    <TextView
        android:layout_marginTop="150dp"
        android:id="@+id/text_menu"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/menu"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

   <Button
       android:id="@+id/btn_go_register"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/text_menu"
       android:backgroundTint="@color/white"
       android:textColor="@color/black"
       android:paddingVertical="10dp"
       android:layout_marginTop="5dp"
       android:textAlignment="textStart"
       android:text="@string/create_account"></Button>
    <Button
        android:id="@+id/btn_go_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_register"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:paddingVertical="10dp"
        android:layout_marginTop="5dp"
        android:textAlignment="textStart"
        android:text="@string/login"></Button>
    <Button
        android:id="@+id/btn_go_acknowledgement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_login"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:paddingVertical="10dp"
        android:layout_marginTop="5dp"
        android:textAlignment="textStart"
        android:text="@string/acknowledgement_title"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>