<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.BusTripFragment">


    <ImageView
        android:id="@+id/bus_trip_fgmt_person_imgvw"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/scooter">

    </ImageView>
    <TextView
        android:id="@+id/bus_trip_fgmt_distance_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/bus_trip_fgmt_time_lbl"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/distance"
        android:layout_marginEnd="50dp"
        />
    <TextView
        android:id="@+id/bus_trip_fgmt_time_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/time_remaining" />
    <TextView
        android:id="@+id/bus_trip_fgmt_distance_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/bus_trip_fgmt_distance_lbl"
        app:layout_constraintTop_toBottomOf="@id/bus_trip_fgmt_time_lbl"
        android:text="@string/distance_15km"
        android:layout_marginEnd="50dp"
        />
    <TextView
        android:id="@+id/bus_trip_fgmt_time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/bus_trip_fgmt_time_lbl"

        app:layout_constraintTop_toBottomOf="@id/bus_trip_fgmt_time_lbl"
        android:text="@string/time_15min" />

    <Button
        android:id="@+id/bus_trip_fgmt_sos_btn"
        android:layout_width="wrap_content"
        android:text="@string/GO"
        android:backgroundTint="@color/black"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bus_trip_fgmt_person_imgvw"
        android:layout_marginTop="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        ></Button>

</FrameLayout>