<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment"
    android:padding="5dp">

  <ImageView
      android:id="@+id/login_frg_logo"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:src="@drawable/ic_launcher_background"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_marginTop="30dp">
  </ImageView>
  <TextView
      android:id="@+id/login_frh_title"
      app:layout_constraintTop_toBottomOf="@id/login_frg_logo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/login"
      android:textColor="@color/dark_navy"
      android:textSize="30sp"
      android:textStyle="bold"
      android:paddingVertical="10dp"

      >

  </TextView>

  <LinearLayout
      android:layout_marginTop="0dp"
      android:id="@+id/login_frg_email_ll"
      app:layout_constraintTop_toBottomOf="@id/login_frh_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" android:layout_marginEnd="20dp">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:src="@drawable/at"></ImageView>

    <EditText
        android:id="@+id/login_frg_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/selver"

        ></EditText>
  </LinearLayout>
  <LinearLayout
      android:layout_marginTop="20dp"
      android:id="@+id/login_frg_pass_ll"
      app:layout_constraintTop_toBottomOf="@id/login_frg_email_ll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" android:layout_marginEnd="20dp">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:src="@drawable/lock"></ImageView>
    <EditText
        android:id="@+id/login_frg_pass_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/bottom_border"
        android:textColorHint="@color/selver"
        android:paddingVertical="10dp"
        ></EditText>

  </LinearLayout>



    <Button
        android:id="@+id/login_btn"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:paddingHorizontal="50dp"
        android:paddingVertical="10dp"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_frg_pass_ll"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        ></Button>


  <TextView
      android:id="@+id/login_or_ll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/login_btn"
      android:text="@string/or"
      android:textAlignment="center"
      android:paddingVertical="5dp"
      ></TextView>
  <LinearLayout
      android:id="@+id/register_texts_ll"
      app:layout_constraintTop_toBottomOf="@id/login_or_ll"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/new_here"></TextView>

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_200"
        android:layout_marginHorizontal="10dp"
        android:text="@string/register_now"
        android:textStyle="bold"
        />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>